--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       Bonjour et bienvenue.
       Baladez-vous sur le site et cherchez ce dont vous avez besoin!
     <p/>
-    <table>
+    <table width="1">
       <td>
         <tr rowspan="2">A</tr>
         <tr>B</tr>
