--- a/index.html
+++ b/index.html
@@ -9,21 +9,21 @@
       Baladez-vous sur le site et cherchez ce dont vous avez besoin!
     <p/>
     <table width="80%" border="1">
-      <td>
-        <tr rowspan="2">A</tr>
-        <tr>B</tr>
-        <tr>C</tr>
-      </td>
-      <td>
-        <!-- pour laisser de la place à "A" <tr>D</tr> -->
-        <tr>E</tr>
-        <tr>F</tr>
-      </td>
-      <td>
-        <tr>G</tr>
-        <tr>H</tr>
-        <tr>I</tr>
-      </td>
+      <tr>
+        <td rowspan="2">A</td>
+        <td>B</td>
+        <td>C</td>
+      </tr>
+      <tr>
+        <!-- Pour laisser de la place au "A" <td>D</td> -->
+        <td>E</td>
+        <td>F</td>
+      </tr>
+      <tr>
+        <td>G</td>
+        <td>H</td>
+        <td>I</td>
+      </tr>
     </table>
     <p>
       Il fallait y penser!
