--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
     <p>
       Il fallait y penser!
     </p>
-    <h2> La vie est belle </h2>
+    <h2> Voici la nomenclature : </h2>
   </body>
 </html>
