--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </tr>
     </table>
     <p>
-      Il fallait y penser!
+      C'est surtout pour les cours et les tests.
     </p>
     <h2> Voici la nomenclature : </h2>
   </body>
